--- a/View/AdminControls/Orders.xaml
+++ b/View/AdminControls/Orders.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:FoodApp.View.AdminControls"
              mc:Ignorable="d" 
-             d:DesignHeight="400" d:DesignWidth="500">
+             d:DesignHeight="400">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -24,6 +24,9 @@
                     <GridViewColumn 
                         Header="Клиент" Width="70"
                         DisplayMemberBinding="{Binding UserId}"/>
+                    <GridViewColumn 
+                        Header="Дата/Время" Width="160"
+                        DisplayMemberBinding="{Binding DateTime}"/>
                     <GridViewColumn 
                         Header="Итог" Width="80"
                         DisplayMemberBinding="{Binding TotalCost}"/>
